--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -4,6 +4,7 @@ $black: #000;
 $green: lightgreen;
 $orange: orange;
 $blue: #1010ff;
+$lightgrey: #050505;
 $color-card-todo: #56B2E5;
 $color-card-inprogress: #f76176;
 $color-card-done: #485e76;
