--- a/src/sass/mixins.scss
+++ b/src/sass/mixins.scss
@@ -8,6 +8,19 @@
 	cursor: pointer;
 }
 
+// Box shadow
+
+@mixin box-shadow($shadow: null) {
+	@if ($shadow) {
+		-webkit-box-shadow: $shadow; // iOS <4.3 & Android <4.1
+		box-shadow: $shadow;
+	} @else {
+		-webkit-box-shadow: $box-shadow-default;
+		box-shadow: $box-shadow-default;
+	}
+}
+
+
 @mixin respondto($media...) {
 	@each $screensize in $media {
 		@if $screensize == xs {
