Set CSS Board for responsiveness

--- a/src/containers/Board/Board.scss
+++ b/src/containers/Board/Board.scss
@@ -1,6 +1,11 @@
+
+@import "../../sass/variables.scss";
+@import "../../sass/mixins.scss";
+
 .Board {  
     display: flex;
     flex-direction: row;
-    width: 100%;
+    max-width: $screen-ph-max;  
     font-family: 'Questrial', sans-serif;
+    margin: 0 auto;
 }
