--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,5 +1,5 @@
-@import "../../sass/variables.scss";
-@import "../../sass/mixins.scss";
+@import "../../styles/sass/variables.scss";
+@import "../../styles/sass/mixins.scss";
 
 .Card { 
   width: 50%;
