--- a/src/containers/Board/Board.scss
+++ b/src/containers/Board/Board.scss
@@ -1,6 +1,5 @@
-
-@import "../../sass/variables.scss";
-@import "../../sass/mixins.scss";
+@import "../../styles/sass/variables.scss";
+@import "../../styles/sass/mixins.scss";
 
 .Board {  
     display: flex;
