--- a/src/containers/Column/Column.scss
+++ b/src/containers/Column/Column.scss
@@ -1,5 +1,6 @@
-@import "../../sass/variables.scss";
-@import "../../sass/mixins.scss";
+@import "../../styles/sass/variables.scss";
+@import "../../styles/sass/mixins.scss";
+
 
 .Column {
   border: 1px solid $white; 
