Update style and add coverage

--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -16,6 +16,11 @@
   cursor: pointer;
 }
 
+.isDragged, .isDragged:hover {
+  cursor: move;
+  border: 1px dashed grey;
+}
+
 .card-header {
   outline: 1px solid $blue;
 }
